--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.userosscache
 *.sln.docstates
 
+# User-specific files (MonoDevelop/Xamarin Studio)
+*.userprefs
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
@@ -19,9 +21,11 @@ bld/
 [Bb]in/
 [Oo]bj/
 
+# Visual Studo 2015 cache/options directory
+.vs/
+
 # Roslyn cache directories
 *.ide/
-
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
@@ -150,6 +154,8 @@ AppPackages/
 # Others
 sql/
 *.Cache
+*.[Cc]ache
+
 ClientBin/
 [Ss]tyle[Cc]op.*
 ~$*
@@ -159,6 +165,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 node_modules/
+bower_components/
 
 # RIA/Silverlight projects
 Generated_Code/
@@ -220,6 +227,15 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
+
+# Node.js Tools for Visual Studio
+.ntvs_analysis.dat
+
+# Visual Studio 6 build log
+*.plg
+
+# Visual Studio 6 workspace options file
+*.opt
 
 # Windows Installer files
 *.cab
